--- a/project.Rmd
+++ b/project.Rmd
@@ -459,9 +459,11 @@ ggplot(test_df, aes(Comp1, Comp2, color = Class)) +
 
 The final PLS-DA model does not show a visibly stronger separation because the main class structure was already captured by the first two components in the initial model. Tuning improves model stability and classification performance, but these gains occur mostly beyond component 2, which is why the 2D score plot appears similar.
 
-# Feature Selection: Calculate and Rank VIP Scores
+# Feature Selection:
 
-# Calculate and Rank VIP Scores
+## Calculate and Rank VIP Scores
+
+The VIP score for each metabolite measures its relevance to the model components and the classification of the samples.
 
 ```{r vip_ranking}
 # 1. Extract the VIP scores matrix from the final PLS-DA model
@@ -493,7 +495,11 @@ ggplot(vip_top, aes(x = reorder(Metabolite, VIP), y = VIP)) +
        x = "Metabolite")
 ```
 
+The plot highlighted features like V22, V399, V84, and V51 as having the highest scores, all significantly exceeding the standard threshold of VIP > 1.
+
 # Implement Recursive Feature Elimination (RFE) using the k-NN Classifier
+
+We then implemented Recursive Feature Elimination (RFE), a supervised approach, using the k-Nearest Neighbors (k-NN) classifier to determine the optimal, minimal set of metabolites that maximizes classification accuracy.
 
 ```{r rfe_knn_execution}
 set.seed(123)
@@ -553,6 +559,9 @@ ggplot(rfe_df, aes(x = Variables, y = Accuracy)) +
 kable(round(rfe_df, 3), caption = "RFE Accuracy by Number of Features")
 
 ```
+
+The process identified the optimal number of features to be 20.
+The model achieved a maximum cross-validated accuracy of 0.720 using this subset.
 
 # Final Model Training and Evaluation with Optimal Features
 
@@ -711,37 +720,6 @@ cat("AUCROC:  Mean =", round(mean(boot_auc, na.rm = TRUE), 4),
 
 ```
 
-# ROC/AUC for External Validation
-
-To rigorously assess the diagnostic power of the final model on independent data, we computed the Receiver Operating Characteristic (ROC) curve and the Area Under the Curve (AUC) using the external test set. This allows us to evaluate the model's overall discriminative ability irrespective of specific classification thresholds.
-
-```{r roc_auc_final, message=FALSE, warning=FALSE}
-
-# Predict on test set (extract scores for the positive class)
-pred_test <- predict(pls_final_optimal, X_test_optimal)
-scores <- pred_test$predict[, 2, optimal_ncomp]
-
-# Calculate ROC and AUC
-roc_obj <- roc(y_test, scores, levels = rev(levels(y_test)), quiet = TRUE)
-auc_val <- auc(roc_obj)
-
-# Output AUC value
-cat("Final Model AUC:", round(auc_val, 4), "\n")
-
-# Plot ROC Curve
-plot(roc_obj, 
-     main = paste("ROC Curve - External Validation\nAUC =", round(auc_val, 3)),
-     col = "#1c61b6", 
-     lwd = 2, 
-     legacy.axes = TRUE)
-
-# Add diagonal reference line
-abline(a = 0, b = 1, lty = 2, col = "gray")
-```
-The resulting ROC curve displays a high AUC value (close to 1.0), confirming that the optimized set of metabolites achieves excellent separation between male and female subjects with robust sensitivity and specificity.
-
-# Figure of Merit Uncertainty (Bootstrap 95% CI)
-
 ```{r}
 # Figure of Merit Uncertainty (Bootstrap 95% CI)
 
@@ -863,4 +841,35 @@ cat(sprintf("Spec(F):  Mean = %.4f | 95%% CI = %.4f – %.4f\n", mean(boot_specF
 cat(sprintf("Sens(M):  Mean = %.4f | 95%% CI = %.4f – %.4f\n", mean(boot_sensM, na.rm = TRUE), sensM_ci[1], sensM_ci[2]))
 cat(sprintf("Spec(M):  Mean = %.4f | 95%% CI = %.4f – %.4f\n", mean(boot_specM, na.rm = TRUE), specM_ci[1], specM_ci[2]))
 cat(sprintf("AUCROC:   Mean = %.4f | 95%% CI = %.4f – %.4f\n", mean(boot_auc, na.rm = TRUE), auc_ci[1], auc_ci[2]))
+
+
 ```
+
+# ROC/AUC for External Validation
+
+To rigorously assess the diagnostic power of the final model on independent data, we computed the Receiver Operating Characteristic (ROC) curve and the Area Under the Curve (AUC) using the external test set. This allows us to evaluate the model's overall discriminative ability irrespective of specific classification thresholds.
+
+```{r roc_auc_final, message=FALSE, warning=FALSE}
+
+# Predict on test set (extract scores for the positive class)
+pred_test <- predict(pls_final_optimal, X_test_optimal)
+scores <- pred_test$predict[, 2, optimal_ncomp]
+
+# Calculate ROC and AUC
+roc_obj <- roc(y_test, scores, levels = rev(levels(y_test)), quiet = TRUE)
+auc_val <- auc(roc_obj)
+
+# Output AUC value
+cat("Final Model AUC:", round(auc_val, 4), "\n")
+
+# Plot ROC Curve
+plot(roc_obj, 
+     main = paste("ROC Curve - External Validation\nAUC =", round(auc_val, 3)),
+     col = "#1c61b6", 
+     lwd = 2, 
+     legacy.axes = TRUE)
+
+# Add diagonal reference line
+abline(a = 0, b = 1, lty = 2, col = "gray")
+```
+The resulting ROC curve displays a high AUC value (close to 1.0), confirming that the optimized set of metabolites achieves excellent separation between male and female subjects with robust sensitivity and specificity.
