--- a/project.Rmd
+++ b/project.Rmd
@@ -615,6 +615,27 @@ BER <- function(conf_matrix) {
 ber_optimal <- BER(confusion_matrix_optimal)
 cat("Balanced Error Rate (BER):", round(ber_optimal, 4), "\n")
 
+conf_df_optimal <- as.data.frame(confusion_matrix_optimal)
+colnames(conf_df_optimal) <- c("True", "Predicted", "Count")
+
+
+ggplot(conf_df_optimal, aes(x = Predicted, y = True, fill = Count)) +
+  geom_tile(color = "white", linewidth = 0.8) +
+  geom_text(aes(label = Count), size = 6, fontface = "bold") +
+  scale_fill_gradient(low = "#f7f7f7", high = "#1f78b4") +
+  labs(
+    title = "Confusion Matrix — Final PLS-DA (External Test Set)",
+    x = "Predicted Class",
+    y = "True Class",
+    fill = "Count"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    axis.title = element_text(face = "bold"),
+    legend.position = "right"
+  )
+
 
 ```
 
@@ -718,6 +739,27 @@ cat("Accuracy: Mean =", round(mean(boot_acc), 4),
 cat("AUCROC:  Mean =", round(mean(boot_auc, na.rm = TRUE), 4),
     " | 95% CI =", round(auc_ci[1], 4), "-", round(auc_ci[2], 4), "\n")
 
+
+conf_df <- as.data.frame(conf_matrix)
+colnames(conf_df) <- c("True", "Predicted", "Count")
+
+
+ggplot(conf_df, aes(x = Predicted, y = True, fill = Count)) +
+  geom_tile(color = "white", linewidth = 0.8) +
+  geom_text(aes(label = Count), size = 6, fontface = "bold") +
+  scale_fill_gradient(low = "#f0f0f0", high = "#2c7fb8") +
+  labs(
+    title = "Confusion Matrix — External Test Set",
+    x = "Predicted Class",
+    y = "True Class",
+    fill = "Count"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    axis.title = element_text(face = "bold"),
+    legend.position = "right"
+  )
 ```
 
 ```{r}
